--- a/StarRentersAPI/WebApplication1/appsettings.json
+++ b/StarRentersAPI/WebApplication1/appsettings.json
@@ -1,9 +1,16 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+  "profiles": {
+    "IIS Express": {
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+      "applicationUrl": "https://localhost:7090" // Aquí está el puerto
+    },
+    "ProjectName": {
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+      "applicationUrl": "https://localhost:7090" // Aquí está el puerto
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
